Fix overflow on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -23,6 +23,7 @@ body {
   html,
   body {
     height: auto;
+    overflow: auto;
   }
 }
 
